Fixed broken collapse boxes.

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,6 @@ td {
 }
 
 .ui-collapsible-content {
-  display: block;
   padding: 10px 10px 10px 8px;
 }
 
